--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eventemitter3",
+  "name": "@matvp/eventemitter3",
   "version": "5.0.1",
   "description": "EventEmitter3 focuses on performance while maintaining a Node.js AND browser compatible interface.",
   "exports": {
@@ -59,8 +59,6 @@
     "c8": "^8.0.1",
     "mocha": "^10.0.0",
     "pre-commit": "^1.2.0",
-    "rollup": "^4.5.2",
-    "sauce-browsers": "^3.0.0",
-    "sauce-test": "^1.3.3"
+    "rollup": "^4.5.2"
   }
 }
